tests/ui/cfg/diagnostics-not-a-def.stderr
error[E0425]: cannot find function `i_am_not` in module `inner`
  --> $DIR/diagnostics-not-a-def.rs:11:12
   |
LL |     inner::i_am_not();
   |            ^^^^^^^^ not found in `inner`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0425`.
